Applied previous hidden email address change to mail form too

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -13,7 +13,7 @@ UseBB 1.0.5 Changelog
 - Random passwords by "forgot password" now respect the password minimum length.
 - Changed method to show e-mail addresses "spam proof", now using HTML entities.
 - Now count topic views as unique view per user per session.
-- Always show raw e-mail address too on profile when user may view hidden ones.
+- Always show raw e-mail address too when user may view hidden ones.
 
 UseBB 1.0.4 Changelog
 ------------------------------
