Another (hopefully always working) fix for Undefined index: PATH_TRANSLATED.

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,5 +1,10 @@
 $Header$
 
+UseBB 1.0.6 Changelog
+------------------------------
+
+- Another (hopefully always working) fix for Undefined index: PATH_TRANSLATED.
+
 UseBB 1.0.5 Changelog
 ------------------------------
 
