--- a/AUTHORS
+++ b/AUTHORS
@@ -8,7 +8,7 @@ Developers (CVS access)
 	* Tadashi "ELF" Jokagi
 		Multibyte support and email handling patches
 
-	* Jack "wehnerj" Wehner
+	* Jeremy "Jemo" Hixon
 		Forum/topic icons
 
 3rd party portions
