--- a/Changelog.txt
+++ b/Changelog.txt
@@ -4,10 +4,11 @@ UseBB 1.0.7 Changelog
 ------------------------------
 
 - Added an (random math based or custom) anti-spam question feature against spam bots.
-- Made the sendmail -f parameter an on/off setting.
-- Fixed CSS for code blocks in IE and Safari.
-- Renamed httpOnly cookie parameter to HttpOnly (correct case).
-- Added random_seed() function to seed the random generator on old PHP versions.
+- Added a security measure which generates a new session ID when logging in/out.
+- Fixed CSS for BBCode [code] blocks in IE and Safari.
+- Fixed faulty HTTP_HOST reassembling when running on port other than 80.
+- Made the sendmail -f parameter for emails an on/off setting.
+- Now always stop when superglobals are (tried to be) defined via GET/POST/COOKIE.
 
 UseBB 1.0.6 Changelog
 ------------------------------
