--- a/Changelog.txt
+++ b/Changelog.txt
@@ -3,6 +3,7 @@ $Header$
 UseBB 1.0.8 Changelog
 ------------------------------
 
+- Fixed bug #1700: From in e-mail messages gets split.
 - Allow terms of use text to contain HTML markup.
 
 UseBB 1.0.7 Changelog
