--- a/UseBB/lib/UseBB/i18n/languages/nl.xml
+++ b/UseBB/lib/UseBB/i18n/languages/nl.xml
@@ -1,5 +1,23 @@
 <?xml version="1.0"?>
-<language code="nl" direction="ltr" version="1.99">
+<!--
+	This file is part of UseBB.
+
+	UseBB is free software: you can redistribute it and/or modify
+	it under the terms of the GNU General Public License as published by
+	the Free Software Foundation, either version 3 of the License, or
+	(at your option) any later version.
+
+	UseBB is distributed in the hope that it will be useful,
+	but WITHOUT ANY WARRANTY; without even the implied warranty of
+	MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+	GNU General Public License for more details.
+
+	You should have received a copy of the GNU General Public License
+	along with UseBB.  If not, see <http://www.gnu.org/licenses/>.
+	
+	$Rev$
+-->
+<language code="nl" direction="ltr" version="2.0-alpha">
 	<name>
 		<english>Dutch</english>
 		<native>Nederlands</native>
