--- a/Changelog.txt
+++ b/Changelog.txt
@@ -3,6 +3,7 @@ $Header$
 UseBB 1.0.9 Changelog
 ------------------------------
 
+- Fixed bug #1935: Redirect URLs containing backslashes on some platforms (Windows).
 - Made smiley image tags refer to the path using ROOT_PATH.
 
 UseBB 1.0.8 Changelog
