Fixed bug #1983: Jabber link on profile needs "xmpp" as protocol, not "jabber".

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -5,6 +5,7 @@ UseBB 1.0.9 Changelog
 
 - Fixed bug #1962: RSS feed fails to validate.
 - Fixed bug #1935: Redirect URLs containing backslashes on some platforms (Windows).
+- Fixed bug #1983: Jabber link on profile needs "xmpp" as protocol, not "jabber".
 - Made smiley image tags refer to the path using ROOT_PATH.
 
 UseBB 1.0.8 Changelog
