- BBCode in links breaks XML well-formedness. - Some small changes and minor JS fix.

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -3,6 +3,7 @@ $Header$
 UseBB 1.0.9 Changelog
 ------------------------------
 
+- Fixed bug #2001: BBCode in links breaks XML well-formedness.
 - Fixed bug #1962: RSS feed fails to validate.
 - Fixed bug #1935: Redirect URLs containing backslashes on some platforms (Windows).
 - Fixed bug #1983: Jabber link on profile needs "xmpp" as protocol, not "jabber".
