--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,5 +1,10 @@
 $Header$
 
+UseBB 1.0.10 Changelog
+------------------------------
+
+- Fixed malfunctioning RSS Feed when friendly URLs are enabled.
+
 UseBB 1.0.9 Changelog
 ------------------------------
 
