- Redirect to the previously selected pane on activating member in ACP. - Added email address tooltip on profile link in ACP activate members pane.

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -3,6 +3,8 @@ $Header$
 UseBB 1.0.10 Changelog
 ------------------------------
 
+- Redirect to the previously selected pane on activating member in ACP.
+- Added email address tooltip on profile link in ACP activate members pane.
 - Fixed malfunctioning RSS Feed when friendly URLs are enabled.
 
 UseBB 1.0.9 Changelog
