Made usernames in IP address lookup clickable.

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -7,6 +7,7 @@ UseBB 1.0.10 Changelog
 - Added email address tooltip on profile link in ACP activate members pane.
 - Fixed malfunctioning RSS Feed when friendly URLs are enabled.
 - Translate IP address ::1 in session to 127.0.0.1 for consistency.
+- Made usernames in IP address lookup clickable.
 
 UseBB 1.0.9 Changelog
 ------------------------------
