--- a/Changelog.txt
+++ b/Changelog.txt
@@ -8,6 +8,7 @@ UseBB 1.0.10 Changelog
 - Fixed malfunctioning RSS Feed when friendly URLs are enabled.
 - Translate IP address ::1 in session to 127.0.0.1 for consistency.
 - Made usernames in IP address lookup clickable.
+- Mass email in board default language and only to unique email addresses.
 
 UseBB 1.0.9 Changelog
 ------------------------------
