--- a/Changelog.txt
+++ b/Changelog.txt
@@ -10,6 +10,7 @@ UseBB 1.0.10 Changelog
 - Made usernames in IP address lookup clickable.
 - Mass email in board default language and only to unique email addresses.
 - Personal emails now sent in correct (recipient's) language.
+- Show a warning (unsupported) on the ACP index with UTF-8 translations.
 
 UseBB 1.0.9 Changelog
 ------------------------------
