--- a/AUTHORS
+++ b/AUTHORS
@@ -25,6 +25,9 @@ Developers (CVS access)
 	* aiwebs.co.nz
 		Smiley graphics (GNU GPL v2)
 
+	* stefanor at Drupal.org
+		HTML named entities to code table
+
 	Any changes to 3rd party code can be tracked at
 	http://usebb.cvs.sourceforge.net/usebb/UseBB/.
 
