--- a/AUTHORS
+++ b/AUTHORS
@@ -26,7 +26,7 @@ Developers (CVS access)
 		Smiley graphics (GNU GPL v2)
 
 	* stefanor at Drupal.org
-		HTML named entities to code table
+		HTML named entities to code table (GNU GPL v2)
 
 	Any changes to 3rd party code can be tracked at
 	http://usebb.cvs.sourceforge.net/usebb/UseBB/.
