--- a/Changelog.txt
+++ b/Changelog.txt
@@ -15,6 +15,7 @@ UseBB 1.0.10 Changelog
 - Translate IP address ::1 in session to 127.0.0.1 for consistency.
 - Made usernames in IP address lookup clickable.
 - Show a warning (unsupported) on the ACP index with UTF-8 translations.
+- Board image is now added to RSS feeds.
 
 UseBB 1.0.9 Changelog
 ------------------------------
