--- a/Changelog.txt
+++ b/Changelog.txt
@@ -3,6 +3,7 @@ $Header$
 UseBB 1.0.11 Changelog
 ------------------------------
 
+- Removed ICQ status icons from profile.
 - Hide "deprecated" warnings from PHP 5.3.
 
 UseBB 1.0.10 Changelog
