--- a/Changelog.txt
+++ b/Changelog.txt
@@ -4,6 +4,9 @@ UseBB 1.0.11 Changelog
 ------------------------------
 
 - Added possibility to remove user's posts upon removing user in ACP.
+- Added possibility to ban user's email address or domain upon removing user in ACP.
+- Fixed bug that didn't update stats on full forum delete.
+- Added user delete link for admin on profiles.
 - Removed ICQ status icons from profile.
 - Hide "deprecated" warnings from PHP 5.3.
 
