--- a/Changelog.txt
+++ b/Changelog.txt
@@ -10,6 +10,7 @@ UseBB 1.0.11 Changelog
 - Removed ICQ status icons from profile.
 - Hide "deprecated" warnings from PHP 5.3.
 - Forum select boxes are larger.
+- SQL toolbox now prints usable HTML table for results instead of textbox.
 
 UseBB 1.0.10 Changelog
 ------------------------------
