--- a/Changelog.txt
+++ b/Changelog.txt
@@ -7,6 +7,8 @@ UseBB 1.0.11 Changelog
 - Added possibility to ban user's email address or domain upon removing user in ACP.
 - Added preview feature for member pruning in ACP.
 - Fixed bug that didn't update stats on full forum delete.
+- Fixed bug that didn't adjust posts from certain members upon member pruning.
+- Fixed bug #2492: never logged in users are always pruned with member pruning.
 - Added user delete link for admin on profiles.
 - Removed ICQ status icons from profile.
 - Hide "deprecated" warnings from PHP 5.3.
