--- a/Changelog.txt
+++ b/Changelog.txt
@@ -6,6 +6,7 @@ UseBB 1.0.11 Changelog
 - Added possibility to remove user's posts upon removing user in ACP.
 - Added possibility to ban user's email address or domain upon removing user in ACP.
 - Added preview feature for member pruning in ACP.
+- Added setting to enable/disable PHP's error log.
 - Fixed security issue with forum/topic RSS feeds with "read" forum permission.
 - Fixed bug that didn't update stats on full forum delete.
 - Fixed bug that didn't adjust posts from certain members upon member pruning.
