--- a/Changelog.txt
+++ b/Changelog.txt
@@ -17,7 +17,7 @@ UseBB 1.0.11 Changelog
 - Fixed new/missing settings' wrong default values in ACP.
 - SQL toolbox now prints usable HTML table for results instead of textbox.
 - Removed ICQ status icons from profile.
-- Hide "deprecated" warnings from PHP 5.3.
+- Hide "deprecated" warnings from PHP 5.3 (temporary solution).
 - Forum select boxes are larger.
 - "Remember me" now unchecked on login form.
 - Single error for unexisting user and wrong password on login form.
