--- a/Changelog.txt
+++ b/Changelog.txt
@@ -3,6 +3,8 @@ $Id$
 UseBB 1.0.12 Changelog
 ------------------------------
 
+- Added production environment switch (constant).
+- Halt execution if install directory is not removed and is in production environment.
 - Removed some old code for PHP < 4.3.0. PHP 4.3 is now a minimum requirement.
 - Place HTML title after character encoding meta tag as it should be.
 
