- Reset debug level 2 to 1 when in production environment. - Deprecated warnings are shown for now (cleaning to be done).

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -6,6 +6,7 @@ UseBB 1.0.12 Changelog
 - Fixed errors when getting config values before having config file loaded.
 - Added production environment switch (constant).
 - Halt execution if install directory is not removed and is in production environment.
+- Reset debug level 2 to 1 when in production environment.
 - Removed some old code for PHP < 4.3.0. PHP 4.3 is now a minimum requirement.
 - Place HTML title after character encoding meta tag as it should be.
 
