--- a/Changelog.txt
+++ b/Changelog.txt
@@ -3,10 +3,11 @@ $Id$
 UseBB 1.0.12 Changelog
 ------------------------------
 
+- Fixed wrong error when could not connect to database.
 - Fixed errors when getting config values before having config file loaded.
 - Added production environment switch (constant).
 - Hide PHP notices and deprecation warnings when in production environment.
-- Added log hidden errors setting which still logs error hidden in production environment.
+- Added log hidden errors setting which still logs errors hidden in production environment.
 - Halt execution if install directory is not removed and is in production environment.
 - Reset debug level 2 to 1 when in production environment.
 - Removed some old code for PHP < 4.3.0. PHP 4.3 is now a minimum requirement.
