--- a/Changelog.txt
+++ b/Changelog.txt
@@ -3,10 +3,12 @@ $Id$
 UseBB 1.0.12 Changelog
 ------------------------------
 
+- Added possibility to show new topic and post reply links to guests.
 - Added possibility to only check DNSBL servers upon registering or posting as guest.
+- Added production environment switch (constant).
 - Fixed wrong error when could not connect to database.
 - Fixed errors when getting config values before having config file loaded.
-- Added production environment switch (constant).
+- Post new topic links removed from topic template (template variable still available).
 - Hide PHP notices and deprecation warnings when in production environment.
 - Added log hidden errors setting which still logs errors hidden in production environment.
 - Halt execution if install directory is not removed and is in production environment.
