- Small CSS fix for URLs in post contents and auto overflow.

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -16,6 +16,7 @@ UseBB 1.0.12 Changelog
 - Reset debug level 2 to 1 when in production environment.
 - Removed some old code for PHP < 4.3.0. PHP 4.3 is now a minimum requirement.
 - Place HTML title after character encoding meta tag as it should be.
+- Small CSS fix for URLs in post contents and auto overflow.
 
 UseBB 1.0.11 Changelog
 ------------------------------
