--- a/Changelog.txt
+++ b/Changelog.txt
@@ -17,6 +17,7 @@ UseBB 1.0.12 Changelog
 - Halt execution if install directory is not removed and is in production environment.
 - Reset debug level 2 to 1 when in production environment.
 - Removed some old code for PHP < 4.3.0. PHP 4.3 is now a minimum requirement.
+- Adjusted input and text area field sizes all over the system (generally bigger).
 - Place HTML title after character encoding meta tag as it should be.
 - Small CSS fix for URLs in post contents and auto overflow.
 
