--- a/Changelog.txt
+++ b/Changelog.txt
@@ -21,6 +21,7 @@ UseBB 1.0.12 Changelog
 - Adjusted input and text area field sizes all over the system (generally bigger).
 - Place HTML title after character encoding meta tag as it should be.
 - Small CSS fix for URLs in post contents and auto overflow.
+- Version check can now display full text messages.
 
 UseBB 1.0.11 Changelog
 ------------------------------
