--- a/Changelog.txt
+++ b/Changelog.txt
@@ -21,7 +21,7 @@ UseBB 1.0.12 Changelog
 - Debug info can now show memory usage on PHP >= 5.2.
 - Adjusted input and text area field sizes all over the system (generally bigger).
 - Place HTML title after character encoding meta tag as it should be.
-- Small CSS fix for URLs in post contents and auto overflow.
+- Small style improvements, no custom styles anymore on most input fields.
 - Version check can now display full text messages.
 
 UseBB 1.0.11 Changelog
