--- a/Changelog.txt
+++ b/Changelog.txt
@@ -19,6 +19,7 @@ UseBB 1.0.12 Changelog
 - Reset debug level 2 to 1 when in production environment.
 - Removed some old code for PHP < 4.3.0. PHP 4.3 is now a minimum requirement.
 - Debug info can now show memory usage on PHP >= 5.2.
+- Updated (better) sorting on member list and search results.
 - Adjusted input and text area field sizes all over the system (generally bigger).
 - Place HTML title after character encoding meta tag as it should be.
 - Small style improvements, no custom styles anymore on most input fields.
