--- a/Changelog.txt
+++ b/Changelog.txt
@@ -25,6 +25,7 @@ UseBB 1.0.12 Changelog
 - System now links to application root instead of index.html with friendly URLs.
 - Place HTML title after character encoding meta tag as it should be.
 - Small style improvements, no custom styles anymore on most input fields.
+- Session ID and IP address removed from session information in default template.
 - Version check can now display full text messages.
 
 UseBB 1.0.11 Changelog
