--- a/Changelog.txt
+++ b/Changelog.txt
@@ -21,6 +21,7 @@ UseBB 1.0.12 Changelog
 - Debug info can now show memory usage on PHP >= 5.2.
 - Updated (better) sorting on member list and search results.
 - Now impossible for admin to delete own account in ACP.
+- E-mail address to ban is now editable on user removal in ACP.
 - Adjusted input and text area field sizes all over the system (generally bigger).
 - System now links to application root instead of index.html with friendly URLs.
 - Place HTML title after character encoding meta tag as it should be.
