--- a/Changelog.txt
+++ b/Changelog.txt
@@ -30,6 +30,7 @@ UseBB 1.0.12 Changelog
 - Small style improvements, no custom styles anymore on most input fields.
 - Session ID and IP address removed from session information in default template.
 - User level is now shown as tooltip over custom rank in topics.
+- Show config section names for missing labels of incorrect values.
 - Version check can now display full text messages.
 
 UseBB 1.0.11 Changelog
