--- a/Changelog.txt
+++ b/Changelog.txt
@@ -31,7 +31,7 @@ UseBB 1.0.12 Changelog
 - Session ID and IP address removed from session information in default template.
 - User level is now shown as tooltip over custom rank in topics.
 - Show config section names for missing labels of incorrect values.
-- Show newlines in question answers for FAQ.
+- Show newlines in question answers and current question for FAQ.
 - Version check can now display full text messages.
 
 UseBB 1.0.11 Changelog
