--- a/Changelog.txt
+++ b/Changelog.txt
@@ -32,6 +32,7 @@ UseBB 1.0.12 Changelog
 - User level is now shown as tooltip over custom rank in topics.
 - Show config section names for missing labels of incorrect values.
 - Show newlines in question answers and current question for FAQ.
+- Ensure unique IDs for FAQ questions.
 - Version check can now display full text messages.
 
 UseBB 1.0.11 Changelog
