Fixed mysqli_error() error on failed connect.

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -20,6 +20,7 @@ UseBB 1.0.12 Changelog
 - Fixed URL parsing errors when entities at front/end.
 - Fixed bug with DNSBL banning recheck.
 - Fixed bug with deprecated TYPE=MyISAM syntax on install.
+- Fixed mysqli_error() error on failed connect.
 - Passwords can now contain symbols, and must contain at least one letter and one number.
 - Generated passwords now also contain symbols and are always checked to be valid.
 - Removed mandatory usage of magic_quotes_runtime.
