--- a/Changelog.txt
+++ b/Changelog.txt
@@ -3,6 +3,7 @@ $Id$
 UseBB 1.0.13 Changelog
 ------------------------------
 
+- Member pruning can now delete profile spam accounts.
 - Member pruning can now delete pruned members' posts.
 
 UseBB 1.0.12 Changelog
