--- a/Changelog.txt
+++ b/Changelog.txt
@@ -3,6 +3,8 @@ $Id$
 UseBB 1.0.13 Changelog
 ------------------------------
 
+- Added persistent connections for mysql(i).
+- Fixed database settings screen in ACP general config.
 - Member pruning can now delete profile spam accounts.
 - Member pruning can now delete pruned members' posts.
 - Make mail.php accessible to guests.
