--- a/Changelog.txt
+++ b/Changelog.txt
@@ -3,6 +3,7 @@ $Id$
 UseBB 1.0.13 Changelog
 ------------------------------
 
+- Added potential spammer status for users, restrictions and auto unset.
 - Added Stop Forum Spam API usage for email addresses.
 - Added possibility to submit user info to Stop Forum Spam on deletion.
 - Added possibility to ban last used IP address on user deletion.
@@ -19,6 +20,7 @@ UseBB 1.0.13 Changelog
 - Show RSS feed locations in online list.
 - Activation keys are no longer in the password format, but a longer random string.
 - Reading remote URLs has a timeout of three seconds and recognizes failures better.
+- ACP General Configuration settings related to anti-spam grouped together.
 - ACP General Configuration panes can be reloaded thanks to URL hash usage.
 - Added usebb_debug_output function for clean debug output.
 
