--- a/Changelog.txt
+++ b/Changelog.txt
@@ -11,6 +11,7 @@ UseBB 1.0.13 Changelog
 - Added anti-spam information document.
 - Member pruning can now delete profile spam accounts.
 - Member pruning can now delete pruned members' posts.
+- Can now search accounts by email address in ACP.
 - Fixed database settings screen in ACP general config.
 - Fixed invalid XHTML on member list.
 - Make mail.php accessible to guests.
