--- a/Changelog.txt
+++ b/Changelog.txt
@@ -24,6 +24,7 @@ UseBB 1.0.13 Changelog
 - ACP General Configuration settings related to anti-spam grouped together.
 - ACP General Configuration panes can be reloaded thanks to URL hash usage.
 - Profile edit form has a notice about profiles being invisible to guests.
+- Username in edit and delete members ACP panes is now clickable.
 - Added usebb_debug_output function for clean debug output.
 
 UseBB 1.0.12 Changelog
