--- a/Changelog.txt
+++ b/Changelog.txt
@@ -2,7 +2,7 @@ UseBB 1.0.14 Changelog
 ------------------------------
 
 - Added Google Analytics tracking code support (#93).
-- Breadcrumbs are now made with array -- can use different subsets in templates.
+- Breadcrumbs are now made with array -- can use different subsets in templates (#92).
 - Allow global template variable to be unescaped through js_ prefix (for JS snippets).
 
 UseBB 1.0.13 Changelog
