--- a/Changelog.txt
+++ b/Changelog.txt
@@ -9,6 +9,7 @@ UseBB 1.0.14 Changelog
 - Added re-sync statistics ACP module (#90).
 - Added Stop Forum Spam API request ACP module (#91).
 - Fixed potential spammer status not taken into account in RSS feeds (#103).
+- Fixed invalid forum RSS feed when description contains named HTML entities.
 - Fixed template variable notice in topic RSS feeds (development environment only).
 - Automatically close other sessions for same user (#95).
 - Breadcrumbs are now made with array -- can use different subsets in templates (#92).
