--- a/Changelog.txt
+++ b/Changelog.txt
@@ -5,7 +5,8 @@ Issue numbers (#x):
 UseBB 1.0.15 Changelog
 ------------------------------
 
-
+- Fixed bug 'Configuration settings from config.php might miss backslashes in ACP' (#106).
+- Fixed bug 'Date format from user settings is not cleared from extra backslashes' (#107).
 
 UseBB 1.0.14 Changelog
 ------------------------------
