--- a/Changelog.txt
+++ b/Changelog.txt
@@ -5,6 +5,7 @@ Issue numbers (#x):
 UseBB 1.0.15 Changelog
 ------------------------------
 
+- Fixed bug 'Search does not sort when collecting results' (#115).
 - Fixed bug 'Configuration settings from config.php might miss backslashes in ACP' (#106).
 - Fixed bug 'Date format from user settings is not cleared from extra backslashes' (#107).
 - Fixed bug 'Server load values not read on OS X' (#111).
