--- a/INSTALL.txt
+++ b/INSTALL.txt
@@ -4,8 +4,8 @@ UseBB 2.0.0 pre-alpha installation
 * Requirements
 
 	* PHP >= 5.3.0
-	* Doctrine DBAL 2.1
-	* PHPUnit 3.5 (tests only)
+	* Doctrine DBAL 2.2
+	* PHPUnit 3.6 (tests only)
 
 Doctrine DBAL and PHPUnit can be installed through PEAR. They are not 
 included in the source tree.
@@ -27,7 +27,7 @@ Make sure dbConfig.php has working database credentials and the database tables
 do not exist yet. In a command line window, go to the root UseBB directory and 
 execute:
 
-$ ./scripts/run-unit-tests.sh 
+$ phpunit .
 
 This will make PHPUnit run all tests in the source tree. Passing a path to a 
 test case file will only run that test case.
