--- a/INSTALL.txt
+++ b/INSTALL.txt
@@ -5,27 +5,35 @@ UseBB 2.0.0 pre-alpha installation
 
 	* PHP >= 5.3.0
 	* Doctrine DBAL 2.2
+	* MySQL (InnoDB), SQLite, PostgreSQL, Oracle or SQL Server
 	* PHPUnit 3.6 (tests only)
 
 Doctrine DBAL and PHPUnit can be installed through PEAR. They are not 
 included in the source tree.
 
+When using MySQL, only InnoDB is supported. MyISAM support - as used for years
+with legacy PHP software such as UseBB 1 - is not supported due to the absence
+of transactions and more.
+
 * Installation
 
 Access the root of the web application in the web browser. The Simple Installer
 module will list the steps to install the system and perform the database
-installation.
+installation for the production/development environment.
+
+Before using PHPUnit, the test database must be installed. Do so using:
+
+$ php index.php --env=testing --install-db
 
 The sources can be installed on a different location. Move every file except
-index.php and dbConfig.php to the new location and adjust the value of
+index.php and dbConfig.php to the new location and define the value of
 USEBB_ROOT_PATH in index.php. This way, multiple forums can share one
 source tree.
 
 * Testing
 
-Make sure dbConfig.php has working database credentials and the database tables 
-do not exist yet. In a command line window, go to the root UseBB directory and 
-execute:
+Make sure the testing database has been set up. In a command line window,
+go to the root UseBB directory and execute:
 
 $ phpunit .
 
