--- a/Changelog.txt
+++ b/Changelog.txt
@@ -2,6 +2,11 @@ Issue numbers (#x):
  * As of 1.0.14: see https://github.com/usebb/UseBB/issues/x
  * Before: see http://www.usebb.net/community/topic-x.html
 
+UseBB 1.0.17 Changelog
+------------------------------
+
+- Fixed possible security issue with too loose unserialization of cookie.
+
 UseBB 1.0.16 Changelog
 ------------------------------
 
